--- a/APP.KMX.App/Views/Shared/_Layout.cshtml
+++ b/APP.KMX.App/Views/Shared/_Layout.cshtml
@@ -9,7 +9,9 @@
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/APP.KMX.App.styles.css" asp-append-version="true" />
+    @await RenderSectionAsync("Styles", required: false)
     @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> *@
@@ -52,7 +54,7 @@
                                 <div class="container d-flex flex-column overflow-scroll" style="max-height:75vh; max-width:650px;" >
                                     @foreach (var card in cardList)
                                     {
-                                        @Html.Partial("_ConversionButton", card);
+                                        <partial name="_ConversionButton" model="card" />
                                     }
                                 </div>
                                 @* <li><a class="dropdown-item" href="#">Item 1</a></li>
@@ -97,30 +99,3 @@
 </body>
 
 </html>
-
-
-
-<style>
-    .register-button{
-        /* Button */
-        /* Auto layout */
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding: 20px 32px;
-        gap: 10px;
-        width: 185px;
-        height: 56px;
-        /* Color / Gradient / secondary */
-        background: linear-gradient(125.74deg, #7F00FF 0%, #E100FF 101.18%);
-        border-radius: 30px;
-        /* Inside auto layout */
-        flex: none;
-        order: 5;
-        flex-grow: 0;
-    }
-    .register-text{
-        color: white;
-    }
-</style>
