--- a/APP.KMX.App/Views/Shared/_ConversionButton.cshtml
+++ b/APP.KMX.App/Views/Shared/_ConversionButton.cshtml
@@ -1,4 +1,5 @@
-﻿@model ConversionButtonModel
+﻿@using APP.KMX.App.Models
+@model ConversionButtonModel
 
 <div class="col-md-4 col-sm-6 mb-4">
     <div class="card-style ">
