--- a/APP.KMX.App/Views/Home/Index.cshtml
+++ b/APP.KMX.App/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 agilidade e precisão. Transforme suas coordenadas em mapas vibrantes de maneira rápida e eficiente.
             </p>
             <div class="file-upload-container">
-                <input type="file" id="fileInput" accept=".xls,.xlsx,.kml,.kmz" style="display: none;" />
+                <input type="file" id="fileInput" accept=".xls,.xlsx,.kml,.kmz" class="hidden" />
                 <button class="button-selecionar" onclick="document.getElementById('fileInput').click()">
                     Selecionar Arquivo <img src="img/upload-icon.svg" />
                 </button>
