--- a/APP.KMX.App/Views/Shared/_Layout.cshtml
+++ b/APP.KMX.App/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/components.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/APP.KMX.App.styles.css" asp-append-version="true" />
     @await RenderSectionAsync("Styles", required: false)
     @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -60,8 +61,8 @@
                         <li class="nav-item p-2">
                             <a asp-area="" asp-controller="Account" asp-action="Login" class="nav-link">Entrar</a>
                         </li>
-                        <li class="nav-item p-2 register-button " >
-                            <a asp-area="" asp-controller="Account" asp-action="RegisterPage" class="nav-link register-text color-white" style="color: white;">Cadastre-se</a>
+                        <li class="nav-item p-2">
+                            <a asp-area="" asp-controller="Account" asp-action="RegisterPage" class="register-button register-text">Cadastre-se</a>
                         </li>
                     </ul>
                 </div>
@@ -69,7 +70,7 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3" style="padding-top: 80px;">
+        <main role="main" class="pb-3 main-content">
             @RenderBody()
         </main>
     </div>
